build failed - packages added back

--- a/base_external/configs/aesd_rpi_defconfig
+++ b/base_external/configs/aesd_rpi_defconfig
@@ -17,6 +17,9 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2710-rpi-3-b bcm2710-rpi-3-b-plus bcm2710-rpi-cm3"
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_PACKAGE_RPI_FIRMWARE=y
+BR2_PACKAGE_RPI_FIRMWARE_BOOTCODE_BIN=y
+BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI=y
+BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="board/raspberrypi3/config_3.txt"
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_PIGPIO=y
 BR2_PACKAGE_RASPI_GPIO=y
